--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,9 @@ body {
   left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.25);
 }
 
 .hero {
@@ -110,6 +113,9 @@ a:active {
   border-radius: 0.5rem;
   background-color: hsl(245, 75%, 52%);
   color: #ffffff;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.25);
 }
 
 .btn-ok:hover {
